added response model for instance logs
